--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "dependencies": {
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-scripts": "2.0.5"
+    "react-scripts": "2.0.5",
+    "react-simple-keyboard": "^1.6.2",
+    "talkify-tts": "^2.1.2",
+    "text-to-speech-js": "^1.1.8"
   },
   "scripts": {
     "start": "react-scripts start",
